docs: fix home page footer style and update banner style in dark mode (#298)
* docs: fix home page footer style and update banner style in dark mode

* feat: optimize style

---------

--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -29,5 +29,16 @@
     .dumi-default-header {
       background-color: #fff;
     }
+    .dumi-default-content {
+      background-color: #fff;
+    }
+  }
+}
+
+[data-prefers-color='dark'] {
+  .home {
+    .dumi-default-content {
+      background-color: #050709;
+    }
   }
 }
