--- a/docs/home/components/Banner/index.module.less
+++ b/docs/home/components/Banner/index.module.less
@@ -57,6 +57,17 @@
   }
 }
 
+[data-prefers-color='dark'] {
+  .bannerContainer {
+    .bgImg {
+      filter: brightness(0.4) contrast(1.5) saturate(0.75);
+    }
+  }
+  .titleImg {
+    filter: brightness(0.8) contrast(1.5) saturate(5);
+  }
+}
+
 @media screen and (max-width: 767px) {
   .bannerContainer {
     .bgImg {
